name:                labrat
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jd95/labrat#readme
license:             BSD3
license-file:        LICENSE
author:              Jeff
maintainer:          jeffreydwyer95@outlook.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite labrat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , labrat
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jd95/labrat
