name:                labrat
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jd95/labrat#readme
license:             BSD3
license-file:        LICENSE
author:              Jeff
maintainer:          jeffreydwyer95@outlook.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable labrat
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , sdl2 == 2.3.0
                     , linear
                     , OpenGLRaw
                     , array
                     , protolude
                     , ghc-prim
                     , hvect
  default-language:    Haskell2010
                     
library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , sdl2 == 2.3.0
                     , linear
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jd95/labrat
